tests/NormalTests/paczka1/small_fuzzy/27615752.err
Error in line 2: 2GvJn A880 78,0
Error in line 4: 2GvJn A24 76,7
Error in line 6: qEc A24 4,7
